kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: smartdesk-ingress
  namespace: smartdesk

spec:
  rules:
    - host: smartdesk.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: smartdesk-service
                port:
                  number: 80
